bug fix include anavailable candidates and accumulator unit test

--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -7,19 +7,19 @@
 	"arenella-accounts-menu-subscription": "Sottoscrizione",
 	"arenella-accounts-tabacandidates-actions": "Azioni",
 	"arenella-accounts-tabacandidates-btn-confirm": "Confermare",
-	"arenella-accounts-tabacandidates-btn-delete": "Eliminare",
+	"arenella-accounts-tabacandidates-btn-delete": "Elimina",
 	"arenella-accounts-tabacandidates-btn-disable": "Disattivare",
 	"arenella-accounts-tabacandidates-btn-filter": "Filtro",
 	"arenella-accounts-tabacandidates-email": "E-mail",
 	"arenella-accounts-tabacandidates-id": "Id",
-	"arenella-accounts-tabacandidates-name": "NOME",
+	"arenella-accounts-tabacandidates-name": "Nome",
 	"arenella-accounts-tabacandidates-surname": "Cognome",
 	"arenella-accounts-tabavailability-actions": "Azioni",
 	"arenella-accounts-tabavailability-available": "Disponibile",
 	"arenella-accounts-tabavailability-btn-available": "Disponibile",
 	"arenella-accounts-tabavailability-btn-disable": "Disattivare",
 	"arenella-accounts-tabavailability-id": "ID",
-	"arenella-accounts-tabavailability-name": "NOME",
+	"arenella-accounts-tabavailability-name": "Nome",
 	"arenella-accounts-tabavailability-pos": "POS",
 	"arenella-accounts-tabavailability-role": "Ruolo",
 	"arenella-accounts-tabavailability-unavailable": "Non disponibile",
@@ -27,9 +27,9 @@
 	"arenella-accounts-tabcandidates-company": "Azienda",
 	"arenella-accounts-tabcandidates-email": "E-mail",
 	"arenella-accounts-tabcandidates-id": "Id",
-	"arenella-accounts-tabcandidates-name": "NOME",
+	"arenella-accounts-tabcandidates-name": "Nome",
 	"arenella-accounts-tabcitties-btn-activate": "Attivare",
-	"arenella-accounts-tabcitties-btn-delete": "Eliminare",
+	"arenella-accounts-tabcitties-btn-delete": "Elimina",
 	"arenella-accounts-tabrecruiters-count": "Contare",
 	"arenella-accounts-tabrecruiters-credit-based": "Basato sul credito",
 	"arenella-accounts-tabrecruiters-expired-subscriptions": "Abbonamento scaduto",
@@ -54,7 +54,7 @@
 	"arenella-accounts-tabsubscriptions-email": "E-mail",
 	"arenella-accounts-tabsubscriptions-id": "Id",
 	"arenella-accounts-tabsubscriptions-lang": "Lingua",
-	"arenella-accounts-tabsubscriptions-name": "NOME",
+	"arenella-accounts-tabsubscriptions-name": "Nome",
 	"arenella-accounts-tabsubscriptions-status": "Stato",
 	"arenella-accounts-tabsubscriptions-title": "Azioni di abbonamento richieste",
 	"arenella-accounts-tabsubscriptions-type": "Tipo",
@@ -253,7 +253,7 @@
 	"arenella-listing-location": "Posizione",
 	"arenella-listing-message-to-recruiter": "Messaggio al reclutatore",
 	"arenella-listing-messate-to-recruiter": "Messaggio al reclutatore",
-	"arenella-listing-name": "NOME",
+	"arenella-listing-name": "Nome",
 	"arenella-listing-publicity": "Condividere",
 	"arenella-listing-publicity-location": "Posizione",
 	"arenella-listing-publicity-open-position": "Posizione aperta",
@@ -275,7 +275,7 @@
 	"arenella-login-user-forgotten-password": "Password dimenticata?",
 	"arenella-login-user-forgotten-password-text": "Inserisci la tua email e clicca su \"Reimposta password\" e a breve ti saranno inviati via email un nuovo nome utente e una nuova password.",
 	"arenella-login-user-login": "Login",
-	"arenella-login-user-password": "Parola d'ordine",
+	"arenella-login-user-password": "Password",
 	"arenella-login-user-reset": "Ripristina",
 	"arenella-login-user-subscription-login-to-continue": "Effettua nuovamente l'accesso per continuare",
 	"arenella-login-user-subscription-thankyour": "Grazie per esserti iscritto.",
@@ -289,7 +289,7 @@
 	"arenella-new-candidate-available-from": "Disponibile da",
 	"arenella-new-candidate-btn-add": "Aggiungere",
 	"arenella-new-candidate-btn-back": "Indietro",
-	"arenella-new-candidate-btn-delete": "Eliminare",
+	"arenella-new-candidate-btn-delete": "Elimina",
 	"arenella-new-candidate-btn-publish": "Pubblicare",
 	"arenella-new-candidate-candidate-id": "ID candidato",
 	"arenella-new-candidate-contract": "Contrarre",
@@ -398,7 +398,7 @@
 	"arenella-recruiter-alerts-btn-back": "Indietro",
 	"arenella-recruiter-alerts-btn-cancel": "Annulla",
 	"arenella-recruiter-alerts-btn-confirm": "Confermare",
-	"arenella-recruiter-alerts-btn-delete": "Eliminare",
+	"arenella-recruiter-alerts-btn-delete": "Elimina",
 	"arenella-recruiter-alerts-desc-1": "Al momento non hai nessun avviso. Gli avvisi ti consentono di ricevere una notifica via e-mail ogni volta che un candidato viene aggiunto al sistema che soddisfa una delle tue ricerche predefinite",
 	"arenella-recruiter-alerts-desc-2": "Per aggiungere un avviso di ricerca, esegui una ricerca nella schermata dei candidati e fai clic su \"Crea avviso\"",
 	"arenella-recruiter-alerts-name": "Nome avviso",
@@ -416,7 +416,7 @@
 	"arenella-recruiter-listing-btn-back": "Indietro",
 	"arenella-recruiter-listing-btn-confirm": "Confermare",
 	"arenella-recruiter-listing-btn-create-from-spec": "Crea da specifiche",
-	"arenella-recruiter-listing-btn-delete": "Eliminare",
+	"arenella-recruiter-listing-btn-delete": "Elimina",
 	"arenella-recruiter-listing-btn-edit": "Modificare",
 	"arenella-recruiter-listing-btn-publicity": "Condividere",
 	"arenella-recruiter-listing-btn-publish": "Pubblicare",
@@ -449,7 +449,7 @@
 	"arenella-recruiter-listing-mp-comments": "Commenti",
 	"arenella-recruiter-listing-mp-last-submission": "Data dell'ultima presentazione",
 	"arenella-recruiter-listing-mp-start": "Data di inizio del ruolo",
-	"arenella-recruiter-listing-name": "NOME",
+	"arenella-recruiter-listing-name": "Nome",
 	"arenella-recruiter-listing-next": "Prossimo",
 	"arenella-recruiter-listing-previous": "Precedente",
 	"arenella-recruiter-listing-pub-location": "Posizione",
@@ -507,7 +507,7 @@
 	"arenella-recruiter-mp-btn-request-candidate": "Richiedi Candidato",
 	"arenella-recruiter-mp-detils-btn-back": "Indietro",
 	"arenella-recruiter-mp-detils-btn-confirm": "Confermare",
-	"arenella-recruiter-mp-detils-btn-delete": "Eliminare",
+	"arenella-recruiter-mp-detils-btn-delete": "Elimina",
 	"arenella-recruiter-mp-detils-btn-edit": "Modificare",
 	"arenella-recruiter-mp-detils-comments": "Commenti",
 	"arenella-recruiter-mp-detils-desc": "Descrizione",
@@ -720,7 +720,7 @@
 	"arenella-suggestions-profile-box-notes-btn-saved": "Salva",
 	"arenella-suggestions-profile-box-notes-hdr": "Note per il candidato",
 	"arenella-suggestions-profile-btn-back": "Indietro",
-	"arenella-suggestions-profile-btn-delete": "Eliminare",
+	"arenella-suggestions-profile-btn-delete": "Elimina",
 	"arenella-suggestions-profile-btn-download-cv": "Scarica CV",
 	"arenella-suggestions-profile-btn-edit": "Modificare",
 	"arenella-suggestions-profile-btn-notes": "Appunti",
@@ -730,7 +730,7 @@
 	"arenella-suggestions-profile-candidate-lang-accuracy": "Precisione della lingua",
 	"arenella-suggestions-profile-candidate-matching-skills": "Abilità corrispondenti",
 	"arenella-suggestions-profile-candidate-missing-skills": "Abilità mancanti",
-	"arenella-suggestions-profile-candidate-name": "NOME",
+	"arenella-suggestions-profile-candidate-name": "Nome",
 	"arenella-suggestions-profile-candidate-number": "Numero del candidato",
 	"arenella-suggestions-profile-candidate-skill-accuracy": "Precisione dell'abilità",
 	"arenella-suggestions-profile-intro-text": "Vorrei presentarmi. Il mio nome è",
@@ -742,7 +742,7 @@
 	"arenella-suggestions-search-type-candidate_id": "ID candidato",
 	"arenella-suggestions-search-type-email": "E-mail",
 	"arenella-suggestions-search-type-function": "Funzione",
-	"arenella-suggestions-search-type-name": "NOME",
+	"arenella-suggestions-search-type-name": "Nome",
 	"arenella-suggestions-search-type-name-firstname-default": "Nome di battesimo",
 	"arenella-suggestions-search-type-name-surname-default": "Cognome",
 	"arenella-suggestions-skills": "Competenze",
@@ -850,7 +850,7 @@
 	"mp-left-mnu-contract-type": "Tipo di contratto",
 	"mp-left-mnu-country": "Paese",
 	"mp-left-mnu-location": "Posizione",
-	"mp-left-mnu-name": "NOME",
+	"mp-left-mnu-name": "Nome",
 	"mp-left-mnu-rate-salsary": "Tariffa/stipendio",
 	"mp-left-mnu-renumerationo": "Compenso",
 	"mp-left-mnu-requested-by": "Richiesto da",
