search stats on jobboard

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -1,4 +1,5 @@
 {
+	"ARCHITECT": "Softwarearchitekt",
 	"arenella-accounts-menu-availability": "Verfügbarkeit",
 	"arenella-accounts-menu-candidates": "Kandidaten",
 	"arenella-accounts-menu-cities": "Städte",
@@ -253,6 +254,9 @@
 	"arenella-listing-location": "Standort",
 	"arenella-listing-message-to-recruiter": "Nachricht an den Personalvermittler",
 	"arenella-listing-messate-to-recruiter": "Nachricht an den Personalvermittler",
+	"arenella-listing-most-searched-countries": "Am häufigsten gesuchte Länder in den letzten 30 Tagen",
+	"arenella-listing-most-searched-functions": "Beliebteste Funktionen der letzten 30 Tage",
+	"arenella-listing-most-searched-summary": "Die IT-Personalvermittler, die Arenella-ICT nutzen, arbeiten für ihre eigenen Personalagenturen. Jeder Personalvermittler/jede Personalagentur hat seine eigenen Stellen zu besetzen. Einige der Personalvermittler bewerben ihre offenen Stellen auf der Jobbörse. Andere suchen lieber in den Profilen und kontaktieren die Kandidaten direkt. Die obigen Diagramme zeigen Informationen zu den beliebtesten Kandidatentypen der letzten 30 Tage. Wenn Sie ein kostenloses Profil erstellen, können die Personalvermittler Sie bezüglich relevanter Stellen kontaktieren. Die Personalvermittler werden wahrscheinlich im Namen ihrer eigenen Personalagentur anrufen und nicht im Namen von Arenella-ICT.",
 	"arenella-listing-name": "Name",
 	"arenella-listing-publicity": "Aktie",
 	"arenella-listing-publicity-location": "Standort",
@@ -749,6 +753,7 @@
 	"arenella-suggestions-spanish": "Spanisch",
 	"arenella-suggestions-to": "Zu",
 	"AUSTRIA": "Österreich",
+	"BA": "Business Analyst",
 	"BELGIUM": "Belgien",
 	"BENELUX": "Benelux",
 	"BRITISH_ISLES": "Britische Inseln",
@@ -763,11 +768,13 @@
 	"CREDIT_BASED_SUBSCRIPTION": "",
 	"CROATIA": "Kroatien",
 	"CROATIAN": "Kroatisch",
+	"CSHARP_DEV": "C#-Entwickler",
 	"CYPRUS": "Zypern",
 	"CZECH": "Tschechisch",
 	"CZECH_REPUBLIC": "Tschechische Republik",
 	"DACH": "Dach",
 	"DANISH": "Dänisch",
+	"DATA_SCIENTIST": "Datenanalyst",
 	"DENMARK": "Dänemark",
 	"DUTCH": "Niederländisch",
 	"EASTERN_EUROPE": "Osteuropa",
@@ -830,8 +837,11 @@
 	"info-item-title-to": " Zu ",
 	"info-item-title-years-experience": "",
 	"IRELAND": "Irland",
+	"IT_RECRUITER": "IT-Recruiter",
+	"IT_SECURITY": "IT-Sicherheit",
 	"ITALIAN": "Italienisch",
 	"ITALY": "Italien",
+	"JAVA_DEV": "Java-Entwickler",
 	"LATVIA": "Lettland",
 	"LATVIAN": "Lettisch",
 	"LIECHTENSTEIN": "Liechtenstein",
@@ -857,6 +867,7 @@
 	"mp-left-mnu-requested-skills": "Fähigkeiten",
 	"mp-left-mnu-start-date": "Startdatum",
 	"NETHERLANDS": "Niederlande",
+	"NETWORK_ADMINISTRATOR": "Netzwerkadministrator",
 	"new-candidate-basic": "Basic",
 	"new-candidate-failure": "",
 	"new-candidate-failure-title": "Versagen",
@@ -884,6 +895,7 @@
 	"POLISH": "Polieren",
 	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portugiesisch",
+	"PROJECT_MANAGER": "Projektmanager",
 	"rec-prof-country-belgium": "Belgien",
 	"rec-prof-country-europe": "Europa",
 	"rec-prof-country-ireland": "Irland",
@@ -930,6 +942,7 @@
 	"ROMANIAN": "Rumänisch",
 	"RUSSIAN": "Russisch",
 	"saved-candidate-no-longer-available": "Kandidat nicht mehr verfügbar",
+	"SCRUM_MASTER": "Scrum Master",
 	"Show": "Anzeigen",
 	"show-filters": "Filter anzeigen",
 	"SIX_MONTHS_SUBSCRIPTION": "",
@@ -937,6 +950,8 @@
 	"SLOVAKIAN": "Slowakisch",
 	"SLOVENIA": "Slowenien",
 	"SLOVENIAN": "Slowenisch",
+	"SOFTWARE_DEV_IN_TEST": "SDET",
+	"SOFTWARE_DEVELOPER": "Softwareentwickler",
 	"SOUTHERN_EUROPE": "Südeuropa",
 	"SPAIN": "Spanien",
 	"SPANISH": "Spanisch",
@@ -975,18 +990,22 @@
 	"static-lang-french": "Französisch",
 	"success": "Erfolg",
 	"suggestions-lang-na": "N / A",
+	"SUPPORT": "Support-Analyst",
 	"SWEDEN": "Schweden",
 	"SWEDISH": "Schwedisch",
 	"SWITZERLAND": "Schweiz",
+	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "",
 	"TURKEY": "Truthahn",
 	"TURKISH": "Türkisch",
+	"UI_UX": "UI/UX",
 	"UK": "Vereinigtes Königreich",
 	"UKRAINE": "Ukraine",
 	"UKRAINIAN": "Ukrainisch",
 	"UKRANIAN": "Ukrainisch",
 	"URDU": "Urdu",
 	"US": "USA",
+	"WEB_DEV": "Webentwickler",
 	"WESTERN_EUROPE": "Westeuropa",
 	"WORLD": "Welt",
 	"WORLD_REMOTE": "Welt - Remote",
