--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -1,4 +1,5 @@
 {
+	"ARCHITECT": "Software Architect",
 	"arenella-accounts-menu-availability": "Availability",
 	"arenella-accounts-menu-candidates": "Candidates",
 	"arenella-accounts-menu-cities": "Cities",
@@ -253,6 +254,9 @@
 	"arenella-listing-location": "Location",
 	"arenella-listing-message-to-recruiter": "Message To Recruiter",
 	"arenella-listing-messate-to-recruiter": "Message To Recruiter",
+	"arenella-listing-most-searched-countries": "Most Searched Countries Past 30 days",
+	"arenella-listing-most-searched-functions": "Most Popular Functions Past 30 days",
+	"arenella-listing-most-searched-summary": "The IT recruiters who use Arenella-ICT work for their own recruitment agencies. Each recruiter / recruitment agency has their own roles to fill. Some of the recruiters choose to advertise their open roles on the job board. Others prefer to search on the profiles and contact the candidates directly. The above charts show information relating to the most popular types of candidates over the past 30 days. By creating a free profile, the recruiters will be able to contact you with relevant roles. Recruiters will likely call in the name of their own recruitment agency and not in the name of Arenella-ICT.",
 	"arenella-listing-name": "Name",
 	"arenella-listing-publicity": "Share",
 	"arenella-listing-publicity-location": "Location",
@@ -749,6 +753,7 @@
 	"arenella-suggestions-spanish": "Spanish",
 	"arenella-suggestions-to": "TO",
 	"AUSTRIA": "Austria",
+	"BA": "Business Analyst",
 	"BELGIUM": "Belgium",
 	"BENELUX": "Benelux",
 	"BRITISH_ISLES": "British Isles",
@@ -763,11 +768,13 @@
 	"CREDIT_BASED_SUBSCRIPTION": "Credit Based",
 	"CROATIA": "Croatia",
 	"CROATIAN": "Croatian",
+	"CSHARP_DEV": "C# Developer",
 	"CYPRUS": "Cyprus",
 	"CZECH": "Czech",
 	"CZECH_REPUBLIC": "Czech Republic",
 	"DACH": "Dach",
 	"DANISH": "Danish",
+	"DATA_SCIENTIST": "Data Analyst",
 	"DENMARK": "Denmark",
 	"DUTCH": "Dutch",
 	"EASTERN_EUROPE": "Eastern Europe",
@@ -830,8 +837,11 @@
 	"info-item-title-to": " to ",
 	"info-item-title-years-experience": "Years Experience",
 	"IRELAND": "Ireland",
+	"IT_RECRUITER": "IT Recruiter",
+	"IT_SECURITY": "IT Security",
 	"ITALIAN": "Italian",
 	"ITALY": "Italy",
+	"JAVA_DEV": "Java Developer",
 	"LATVIA": "Latvia",
 	"LATVIAN": "Latvian",
 	"LIECHTENSTEIN": "Liechtenstein",
@@ -857,6 +867,7 @@
 	"mp-left-mnu-requested-skills": "Skills",
 	"mp-left-mnu-start-date": "Start Date",
 	"NETHERLANDS": "Netherlands",
+	"NETWORK_ADMINISTRATOR": "Network Administrator",
 	"new-candidate-basic": "Basic",
 	"new-candidate-failure": "Unable to add Candidate",
 	"new-candidate-failure-title": "Failure",
@@ -884,6 +895,7 @@
 	"POLISH": "Polish",
 	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portuguese",
+	"PROJECT_MANAGER": "Project Manager",
 	"rec-prof-country-belgium": "Belgium",
 	"rec-prof-country-europe": "Europe",
 	"rec-prof-country-ireland": "Ireland",
@@ -930,6 +942,7 @@
 	"ROMANIAN": "Romanian",
 	"RUSSIAN": "Russian",
 	"saved-candidate-no-longer-available": "Candidate No Longer Available",
+	"SCRUM_MASTER": "Scrum Master",
 	"Show": "Show",
 	"show-filters": "Show Filters",
 	"SIX_MONTHS_SUBSCRIPTION": "6 Months",
@@ -937,6 +950,8 @@
 	"SLOVAKIAN": "Slovakian",
 	"SLOVENIA": "Slovenia",
 	"SLOVENIAN": "Slovenian",
+	"SOFTWARE_DEV_IN_TEST": "SDET",
+	"SOFTWARE_DEVELOPER": "Software Developer",
 	"SOUTHERN_EUROPE": "Southern Europe",
 	"SPAIN": "Spain",
 	"SPANISH": "Spanish",
@@ -975,18 +990,22 @@
 	"static-lang-french": "French",
 	"success": "Success",
 	"suggestions-lang-na": "NA",
+	"SUPPORT": "Support analyst",
 	"SWEDEN": "Sweeden",
 	"SWEDISH": "Swedish",
 	"SWITZERLAND": "Switzerland",
+	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "3 Months",
 	"TURKEY": "Turkey",
 	"TURKISH": "Turkish",
+	"UI_UX": "UI/UX",
 	"UK": "United Kingdom",
 	"UKRAINE": "Ucraine",
 	"UKRAINIAN": "Ukrainian",
 	"UKRANIAN": "Ukrainian",
 	"URDU": "Urdu",
 	"US": "USA",
+	"WEB_DEV": "Web Developer",
 	"WESTERN_EUROPE": "Western Europe",
 	"WORLD": "World",
 	"WORLD_REMOTE": "World - Remote",
