--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -1,4 +1,5 @@
 {
+	"ARCHITECT": "Arquitecto de software",
 	"arenella-accounts-menu-availability": "Disponibilidad",
 	"arenella-accounts-menu-candidates": "Candidatos",
 	"arenella-accounts-menu-cities": "Ciudades",
@@ -253,6 +254,9 @@
 	"arenella-listing-location": "Ubicación",
 	"arenella-listing-message-to-recruiter": "Mensaje para el reclutador",
 	"arenella-listing-messate-to-recruiter": "Mensaje para el reclutador",
+	"arenella-listing-most-searched-countries": "Países más buscados en los últimos 30 días",
+	"arenella-listing-most-searched-functions": "Funciones más populares en los últimos 30 días",
+	"arenella-listing-most-searched-summary": "Los reclutadores de TI que utilizan Arenella-ICT trabajan para sus propias agencias de contratación. Cada reclutador/agencia de contratación tiene sus propios puestos que cubrir. Algunos de los reclutadores optan por anunciar sus puestos vacantes en la bolsa de trabajo. Otros prefieren buscar en los perfiles y contactar directamente a los candidatos. Los gráficos anteriores muestran información relacionada con los tipos de candidatos más populares durante los últimos 30 días. Al crear un perfil gratuito, los reclutadores podrán ponerse en contacto con usted para ofrecerle puestos relevantes. Es probable que los reclutadores llamen en nombre de su propia agencia de contratación y no en nombre de Arenella-ICT.",
 	"arenella-listing-name": "Nombre",
 	"arenella-listing-publicity": "Compartir",
 	"arenella-listing-publicity-location": "Ubicación",
@@ -749,6 +753,7 @@
 	"arenella-suggestions-spanish": "Español",
 	"arenella-suggestions-to": "A",
 	"AUSTRIA": "Austria",
+	"BA": "Business Analyst",
 	"BELGIUM": "Bélgica",
 	"BENELUX": "Benelux",
 	"BRITISH_ISLES": "Islas Británicas",
@@ -763,11 +768,13 @@
 	"CREDIT_BASED_SUBSCRIPTION": "Basado en crédito",
 	"CROATIA": "Croacia",
 	"CROATIAN": "Croata",
+	"CSHARP_DEV": "Desarrollador C#",
 	"CYPRUS": "Chipre",
 	"CZECH": "Checo",
 	"CZECH_REPUBLIC": "República Checa",
 	"DACH": "Dach",
 	"DANISH": "Danés",
+	"DATA_SCIENTIST": "Analista de datos",
 	"DENMARK": "Dinamarca",
 	"DUTCH": "Holandés",
 	"EASTERN_EUROPE": "Europa Oriental",
@@ -830,8 +837,11 @@
 	"info-item-title-to": " A ",
 	"info-item-title-years-experience": "",
 	"IRELAND": "Irlanda",
+	"IT_RECRUITER": "Reclutador de TI",
+	"IT_SECURITY": "Seguridad informatica",
 	"ITALIAN": "Italiano",
 	"ITALY": "Italia",
+	"JAVA_DEV": "Desarrollador Java",
 	"LATVIA": "Letonia",
 	"LATVIAN": "Letón",
 	"LIECHTENSTEIN": "Liechtenstein",
@@ -857,6 +867,7 @@
 	"mp-left-mnu-requested-skills": "Habilidades",
 	"mp-left-mnu-start-date": "Fecha de inicio",
 	"NETHERLANDS": "Países Bajos",
+	"NETWORK_ADMINISTRATOR": "Administrador de red",
 	"new-candidate-basic": "BÁSICO",
 	"new-candidate-failure": "",
 	"new-candidate-failure-title": "Falla",
@@ -884,6 +895,7 @@
 	"POLISH": "Polaco",
 	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portugués",
+	"PROJECT_MANAGER": "Gerente de proyecto",
 	"rec-prof-country-belgium": "Bélgica",
 	"rec-prof-country-europe": "Europa",
 	"rec-prof-country-ireland": "Irlanda",
@@ -930,6 +942,7 @@
 	"ROMANIAN": "Rumano",
 	"RUSSIAN": "Ruso",
 	"saved-candidate-no-longer-available": "El candidato ya no está disponible",
+	"SCRUM_MASTER": "Scrum Master",
 	"Show": "Mostrar",
 	"show-filters": "Mostrar filtros",
 	"SIX_MONTHS_SUBSCRIPTION": "",
@@ -937,6 +950,8 @@
 	"SLOVAKIAN": "Eslovaco",
 	"SLOVENIA": "Eslovenia",
 	"SLOVENIAN": "Esloveno",
+	"SOFTWARE_DEV_IN_TEST": "SDET",
+	"SOFTWARE_DEVELOPER": "Desarrollador de software",
 	"SOUTHERN_EUROPE": "Europa del sur",
 	"SPAIN": "España",
 	"SPANISH": "Español",
@@ -975,18 +990,22 @@
 	"static-lang-french": "Francés",
 	"success": "Éxito",
 	"suggestions-lang-na": "N / A",
+	"SUPPORT": "Analista de soporte",
 	"SWEDEN": "Suecia",
 	"SWEDISH": "Sueco",
 	"SWITZERLAND": "Suiza",
+	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "",
 	"TURKEY": "Pavo",
 	"TURKISH": "Turco",
+	"UI_UX": "UI/UX",
 	"UK": "Reino Unido",
 	"UKRAINE": "Ucrania",
 	"UKRAINIAN": "Ucranio",
 	"UKRANIAN": "Ucranio",
 	"URDU": "Urdu",
 	"US": "EE.UU",
+	"WEB_DEV": "Desarrollador web",
 	"WESTERN_EUROPE": "Europa occidental",
 	"WORLD": "Mundo",
 	"WORLD_REMOTE": "Mundo - Remoto",
