--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -1,4 +1,5 @@
 {
+	"ARCHITECT": "Architecte logiciel",
 	"arenella-accounts-menu-availability": "Disponibilité",
 	"arenella-accounts-menu-candidates": "Candidats",
 	"arenella-accounts-menu-cities": "Villes",
@@ -253,6 +254,9 @@
 	"arenella-listing-location": "Emplacement",
 	"arenella-listing-message-to-recruiter": "Message au recruteur",
 	"arenella-listing-messate-to-recruiter": "Message au recruteur",
+	"arenella-listing-most-searched-countries": "Pays les plus recherchés au cours des 30 derniers jours",
+	"arenella-listing-most-searched-functions": "Fonctions les plus populaires au cours des 30 derniers jours",
+	"arenella-listing-most-searched-summary": "Les recruteurs informatiques qui utilisent Arenella-ICT travaillent pour leurs propres agences de recrutement. Chaque recruteur/agence de recrutement a ses propres postes à pourvoir. Certains recruteurs choisissent de publier leurs postes vacants sur le site d'emploi. D'autres préfèrent rechercher sur les profils et contacter directement les candidats. Les graphiques ci-dessus présentent des informations relatives aux types de candidats les plus populaires au cours des 30 derniers jours. En créant un profil gratuit, les recruteurs pourront vous contacter pour des postes pertinents. Les recruteurs appelleront probablement au nom de leur propre agence de recrutement et non au nom d'Arenella-ICT.",
 	"arenella-listing-name": "Prénom",
 	"arenella-listing-publicity": "Partager",
 	"arenella-listing-publicity-location": "Emplacement",
@@ -749,6 +753,7 @@
 	"arenella-suggestions-spanish": "",
 	"arenella-suggestions-to": "À",
 	"AUSTRIA": "L'Autriche",
+	"BA": "Business Analyst",
 	"BELGIUM": "Belgique",
 	"BENELUX": "Benelux",
 	"BRITISH_ISLES": "Îles Britanniques",
@@ -763,11 +768,13 @@
 	"CREDIT_BASED_SUBSCRIPTION": "Credit Based",
 	"CROATIA": "Croatie",
 	"CROATIAN": "Croate",
+	"CSHARP_DEV": "Développeur C#",
 	"CYPRUS": "Chypre",
 	"CZECH": "Tchèque",
 	"CZECH_REPUBLIC": "République tchèque",
 	"DACH": "Dach",
 	"DANISH": "Danois",
+	"DATA_SCIENTIST": "Analyste de données",
 	"DENMARK": "Danemark",
 	"DUTCH": "Néerlandais",
 	"EASTERN_EUROPE": "L'Europe de l'Est",
@@ -830,8 +837,11 @@
 	"info-item-title-to": " a ",
 	"info-item-title-years-experience": "Années d'expérience",
 	"IRELAND": "Irlande",
+	"IT_RECRUITER": "Recruteur informatique",
+	"IT_SECURITY": "Sécurité informatique",
 	"ITALIAN": "Italien",
 	"ITALY": "Italie",
+	"JAVA_DEV": "Développeur Java",
 	"LATVIA": "Lettonie",
 	"LATVIAN": "Letton",
 	"LIECHTENSTEIN": "Liechtenstein",
@@ -857,6 +867,7 @@
 	"mp-left-mnu-requested-skills": "Compétences",
 	"mp-left-mnu-start-date": "Date de début",
 	"NETHERLANDS": "Les Pays-Bas",
+	"NETWORK_ADMINISTRATOR": "Administrateur réseau",
 	"new-candidate-basic": "Basique",
 	"new-candidate-failure": "Impossible d'ajouter un candidat",
 	"new-candidate-failure-title": "Échec",
@@ -884,6 +895,7 @@
 	"POLISH": "Polonais",
 	"PORTUGAL": "Le Portugal",
 	"PORTUGUESE": "Portugais",
+	"PROJECT_MANAGER": "Chef de projet",
 	"rec-prof-country-belgium": "Belgique",
 	"rec-prof-country-europe": "L'Europe",
 	"rec-prof-country-ireland": "Irlande",
@@ -930,6 +942,7 @@
 	"ROMANIAN": "Roumain",
 	"RUSSIAN": "Russe",
 	"saved-candidate-no-longer-available": "Le candidat n'est plus disponible",
+	"SCRUM_MASTER": "Scrum Master",
 	"Show": "Montre",
 	"show-filters": "Afficher les filtres",
 	"SIX_MONTHS_SUBSCRIPTION": "6 mois",
@@ -937,6 +950,8 @@
 	"SLOVAKIAN": "Slovaque",
 	"SLOVENIA": "La Slovénie",
 	"SLOVENIAN": "Slovène",
+	"SOFTWARE_DEV_IN_TEST": "SDET",
+	"SOFTWARE_DEVELOPER": "Développeur de logiciels",
 	"SOUTHERN_EUROPE": "Europe du sud",
 	"SPAIN": "Espagne",
 	"SPANISH": "Espanol",
@@ -975,18 +990,22 @@
 	"static-lang-french": "Français",
 	"success": "Succès",
 	"suggestions-lang-na": "NA",
+	"SUPPORT": "Analyste de soutien",
 	"SWEDEN": "Suède",
 	"SWEDISH": "Suédois",
 	"SWITZERLAND": "Suisse",
+	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "3 mois",
 	"TURKEY": "Dinde",
 	"TURKISH": "Turc",
+	"UI_UX": "UI/UX",
 	"UK": "Royaume-Uni",
 	"UKRAINE": "Ukraine",
 	"UKRAINIAN": "Ukrainien",
 	"UKRANIAN": "",
 	"URDU": "Ourdou",
 	"US": "États-Unis",
+	"WEB_DEV": "Développeur Web",
 	"WESTERN_EUROPE": "Europe de l'Ouest",
 	"WORLD": "Monde",
 	"WORLD_REMOTE": "Monde - À distance",
