--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -1,4 +1,5 @@
 {
+	"ARCHITECT": "Architetto del software",
 	"arenella-accounts-menu-availability": "Disponibilità",
 	"arenella-accounts-menu-candidates": "Candidati",
 	"arenella-accounts-menu-cities": "Città",
@@ -253,6 +254,9 @@
 	"arenella-listing-location": "Posizione",
 	"arenella-listing-message-to-recruiter": "Messaggio al reclutatore",
 	"arenella-listing-messate-to-recruiter": "Messaggio al reclutatore",
+	"arenella-listing-most-searched-countries": "Paesi più cercati ultimi 30 giorni",
+	"arenella-listing-most-searched-functions": "Funzioni più popolari negli ultimi 30 giorni",
+	"arenella-listing-most-searched-summary": "I recruiter IT che utilizzano Arenella-ICT lavorano per le proprie agenzie di reclutamento. Ogni recruiter/agenzia di reclutamento ha i propri ruoli da ricoprire. Alcuni dei recruiter scelgono di pubblicizzare i loro ruoli aperti sulla bacheca dei lavori. Altri preferiscono cercare nei profili e contattare direttamente i candidati. I grafici soprastanti mostrano informazioni relative ai tipi di candidati più popolari negli ultimi 30 giorni. Creando un profilo gratuito, i recruiter saranno in grado di contattarti con ruoli pertinenti. I recruiter probabilmente chiameranno a nome della propria agenzia di reclutamento e non a nome di Arenella-ICT.",
 	"arenella-listing-name": "Nome",
 	"arenella-listing-publicity": "Condividere",
 	"arenella-listing-publicity-location": "Posizione",
@@ -749,6 +753,7 @@
 	"arenella-suggestions-spanish": "Spagnolo",
 	"arenella-suggestions-to": "A",
 	"AUSTRIA": "Austria",
+	"BA": "Business Analyst",
 	"BELGIUM": "Belgio",
 	"BENELUX": "Benelux",
 	"BRITISH_ISLES": "Isole Britanniche",
@@ -763,11 +768,13 @@
 	"CREDIT_BASED_SUBSCRIPTION": "Basato sul credito",
 	"CROATIA": "Croazia",
 	"CROATIAN": "Croato",
+	"CSHARP_DEV": "Sviluppatore C#",
 	"CYPRUS": "Cipro",
 	"CZECH": "Ceco",
 	"CZECH_REPUBLIC": "Repubblica Ceca",
 	"DACH": "Basso",
 	"DANISH": "Danese",
+	"DATA_SCIENTIST": "Analista di dati",
 	"DENMARK": "Danimarca",
 	"DUTCH": "Olandese",
 	"EASTERN_EUROPE": "Europa orientale",
@@ -830,8 +837,11 @@
 	"info-item-title-to": " a",
 	"info-item-title-years-experience": "Anni di esperienza",
 	"IRELAND": "Irlanda",
+	"IT_RECRUITER": "Reclutatore informatico",
+	"IT_SECURITY": "Sicurezza informatica",
 	"ITALIAN": "Italiano",
 	"ITALY": "Italia",
+	"JAVA_DEV": "Sviluppatore Java",
 	"LATVIA": "Lettonia",
 	"LATVIAN": "Lettone",
 	"LIECHTENSTEIN": "Liechtenstein",
@@ -857,6 +867,7 @@
 	"mp-left-mnu-requested-skills": "Competenze",
 	"mp-left-mnu-start-date": "Data d'inizio",
 	"NETHERLANDS": "Olanda",
+	"NETWORK_ADMINISTRATOR": "Amministratore di rete",
 	"new-candidate-basic": "Di base",
 	"new-candidate-failure": "Impossibile aggiungere il candidato",
 	"new-candidate-failure-title": "Fallimento",
@@ -884,6 +895,7 @@
 	"POLISH": "Polacco",
 	"PORTUGAL": "Portogallo",
 	"PORTUGUESE": "Portoghese",
+	"PROJECT_MANAGER": "Responsabile del progetto",
 	"rec-prof-country-belgium": "Belgio",
 	"rec-prof-country-europe": "Europa",
 	"rec-prof-country-ireland": "Irlanda",
@@ -930,6 +942,7 @@
 	"ROMANIAN": "Rumeno",
 	"RUSSIAN": "Russo",
 	"saved-candidate-no-longer-available": "Candidato non più disponibile",
+	"SCRUM_MASTER": "Scrum Master",
 	"Show": "Mostrare",
 	"show-filters": "Mostra filtri",
 	"SIX_MONTHS_SUBSCRIPTION": "6 mesi",
@@ -937,6 +950,8 @@
 	"SLOVAKIAN": "Slovacco",
 	"SLOVENIA": "Slovenia",
 	"SLOVENIAN": "Sloveno",
+	"SOFTWARE_DEV_IN_TEST": "SDET",
+	"SOFTWARE_DEVELOPER": "Sviluppatore di software",
 	"SOUTHERN_EUROPE": "Europa meridionale",
 	"SPAIN": "Spagna",
 	"SPANISH": "Spagnolo",
@@ -975,18 +990,22 @@
 	"static-lang-french": "Francese",
 	"success": "Successo",
 	"suggestions-lang-na": "N / A",
+	"SUPPORT": "Analista di supporto",
 	"SWEDEN": "Svezia",
 	"SWEDISH": "Svedese",
 	"SWITZERLAND": "Svizzera",
+	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "3 mesi",
 	"TURKEY": "Tacchino",
 	"TURKISH": "Turco",
+	"UI_UX": "UI/UX",
 	"UK": "Regno Unito",
 	"UKRAINE": "Ucraina",
 	"UKRAINIAN": "Ucraino",
 	"UKRANIAN": "Ucraino",
 	"URDU": "Italiano:",
 	"US": "U.S.A.",
+	"WEB_DEV": "Sviluppatore Web",
 	"WESTERN_EUROPE": "Europa occidentale",
 	"WORLD": "Mondo",
 	"WORLD_REMOTE": "Mondo - Remoto",
