--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -1,4 +1,5 @@
 {
+	"ARCHITECT": "Softwarearchitect",
 	"arenella-accounts-menu-availability": "Beschikbaarheid",
 	"arenella-accounts-menu-candidates": "Kandidaten",
 	"arenella-accounts-menu-cities": "Steden",
@@ -253,6 +254,9 @@
 	"arenella-listing-location": "Plaats",
 	"arenella-listing-message-to-recruiter": "Bericht aan recruiter",
 	"arenella-listing-messate-to-recruiter": "Bericht aan recruiter",
+	"arenella-listing-most-searched-countries": "Meest gezochte landen afgelopen 30 dagen",
+	"arenella-listing-most-searched-functions": "Meest populaire functies afgelopen 30 dagen",
+	"arenella-listing-most-searched-summary": "De IT-recruiters die Arenella-ICT gebruiken, werken voor hun eigen wervingsbureaus. Elke recruiter/wervingsbureau heeft zijn eigen rollen om in te vullen. Sommige recruiters kiezen ervoor om hun openstaande vacatures op het vacaturebord te adverteren. Anderen zoeken liever op de profielen en nemen rechtstreeks contact op met de kandidaten. De bovenstaande grafieken tonen informatie met betrekking tot de populairste typen kandidaten in de afgelopen 30 dagen. Door een gratis profiel aan te maken, kunnen de recruiters contact met u opnemen met relevante rollen. Recruiters zullen waarschijnlijk bellen in naam van hun eigen wervingsbureau en niet in naam van Arenella-ICT.",
 	"arenella-listing-name": "Naam",
 	"arenella-listing-publicity": "Deel",
 	"arenella-listing-publicity-location": "Plaats",
@@ -749,6 +753,7 @@
 	"arenella-suggestions-spanish": "",
 	"arenella-suggestions-to": "Naar",
 	"AUSTRIA": "Oostenrijk",
+	"BA": "Business Analyst",
 	"BELGIUM": "België",
 	"BENELUX": "Benelux",
 	"BRITISH_ISLES": "Britse eilanden",
@@ -763,11 +768,13 @@
 	"CREDIT_BASED_SUBSCRIPTION": "Credit Based",
 	"CROATIA": "Kroatie",
 	"CROATIAN": "Kroatisch",
+	"CSHARP_DEV": "C#-ontwikkelaar",
 	"CYPRUS": "Cyprus",
 	"CZECH": "Tsjechisch",
 	"CZECH_REPUBLIC": "Tsjechische Republiek",
 	"DACH": "Dach",
 	"DANISH": "Deens",
+	"DATA_SCIENTIST": "Data-analist",
 	"DENMARK": "Denemarken",
 	"DUTCH": "Nederlands",
 	"EASTERN_EUROPE": "Oost-Europa",
@@ -830,8 +837,11 @@
 	"info-item-title-to": " tot ",
 	"info-item-title-years-experience": "Jaren ervaring",
 	"IRELAND": "Ierland",
+	"IT_RECRUITER": "IT-recruiter",
+	"IT_SECURITY": "IT beveiliging",
 	"ITALIAN": "Italiaans",
 	"ITALY": "Italie",
+	"JAVA_DEV": "Java-ontwikkelaar",
 	"LATVIA": "Letland",
 	"LATVIAN": "Lets",
 	"LIECHTENSTEIN": "Liechtenstein",
@@ -857,6 +867,7 @@
 	"mp-left-mnu-requested-skills": "Vaardigheden",
 	"mp-left-mnu-start-date": "Startdatum",
 	"NETHERLANDS": "Nederland",
+	"NETWORK_ADMINISTRATOR": "Netwerkbeheerder",
 	"new-candidate-basic": "Basis",
 	"new-candidate-failure": "Kan kandidaat niet toevoegen",
 	"new-candidate-failure-title": "Fout",
@@ -884,6 +895,7 @@
 	"POLISH": "Pools",
 	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portugees",
+	"PROJECT_MANAGER": "Projectleider",
 	"rec-prof-country-belgium": "België",
 	"rec-prof-country-europe": "Europa",
 	"rec-prof-country-ireland": "Ierland",
@@ -930,6 +942,7 @@
 	"ROMANIAN": "Roemeense",
 	"RUSSIAN": "Russisch",
 	"saved-candidate-no-longer-available": "Kandidaat niet langer beschikbaar",
+	"SCRUM_MASTER": "Scrum Master",
 	"Show": "Laten zien",
 	"show-filters": "Filters weergeven",
 	"SIX_MONTHS_SUBSCRIPTION": "6 maanden",
@@ -937,6 +950,8 @@
 	"SLOVAKIAN": "Slowaaks",
 	"SLOVENIA": "Slovenië",
 	"SLOVENIAN": "Sloveens",
+	"SOFTWARE_DEV_IN_TEST": "SDET",
+	"SOFTWARE_DEVELOPER": "Softwareontwikkelaar",
 	"SOUTHERN_EUROPE": "Zuid-Europa",
 	"SPAIN": "Spanje",
 	"SPANISH": "Spaans",
@@ -975,18 +990,22 @@
 	"static-lang-french": "Frans",
 	"success": "Succes",
 	"suggestions-lang-na": "NA",
+	"SUPPORT": "Ondersteuningsanalist",
 	"SWEDEN": "Zweden",
 	"SWEDISH": "Zweeds",
 	"SWITZERLAND": "Zwitserland",
+	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "3 maanden",
 	"TURKEY": "Kalkoen",
 	"TURKISH": "Turks",
+	"UI_UX": "UI/UX",
 	"UK": "Verenigd Koninkrijk",
 	"UKRAINE": "Oekraïne",
 	"UKRAINIAN": "Oekraïens",
 	"UKRANIAN": "",
 	"URDU": "Urdu",
 	"US": "VS",
+	"WEB_DEV": "Webontwikkelaar",
 	"WESTERN_EUROPE": "West-Europa",
 	"WORLD": "Wereld",
 	"WORLD_REMOTE": "Wereld - Remote",
